--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,22 +4,11 @@ version = "0.1.0"
 authors = ["VinegarChicken"]
 edition = "2018"
 
-[package.metadata.skyline]
-titleid = "01006A800016E000"
-
 [lib]
-crate-type = ["cdylib"]
+name = "smash_utils"
 
 [dependencies]
 skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
 skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
-smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
-smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
 bitflags = "1.3.2"
 
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-lto = true
